Update CORS configuration to use dynamic origins