@@ -27,6 +27,8 @@ import com.expensetracker.service.impl.UserServiceImpl;
 public class AppConfig {
 	
 	private UserServiceImpl userServiceImpl;
+	 @Value("${frontend.cors.list}")
+    private String origins;
 	
 	@Autowired
 	private JwtFilter jwtFilter;
@@ -81,7 +83,8 @@ public class AppConfig {
 	@Bean
 	CorsFilter  corsFilter() {
 		CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://40.81.231.150:5173","http://40.81.231.150:5002")); // frontend origin
+		List<String> allowedOrigins = Arrays.asList(origins.split(","));
+        config.setAllowedOrigins(allowedOrigins); // frontend origin
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true); // 
